--- a/404.html
+++ b/404.html
@@ -926,10 +926,10 @@
           </div>
           <div class="col-12 col-md-9">
             <div class="content-group">
-              <div class="card">
-                <div class="card__text_404">404</div>
+              <div class="card margin-top-15 text-center padding-lg-30 padding-15 bg-color-dark-3"><img class="notfound margin-top-lg-30" src="img/404_1200.png" alt="404 страница не найдена">
                 <div class="content-text">
-                  <p>Страница не найдена. <br> Перейти на  <a href="/">Главную.</a></p>
+                  <p><strong>Ошибка 404</strong></p>
+                  <p class="padding-bottom-lg-30">Страница не найдена. Перейти на  <a href="/">Главную.</a></p>
                 </div>
               </div>
             </div>
