--- a/ads.html
+++ b/ads.html
@@ -929,7 +929,7 @@
               <div class="card margin-bottom-0">
                 <div class="content-title">
                   <div class="content-titlebox">
-                    <h2>Продается гараж 18 м2</h2>
+                    <h2><a href="#">Продается гараж 18 м2</a></h2>
                   </div>
                 </div>
               </div>
@@ -944,13 +944,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-3">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-01.jpg);">
+                  <div class="card"><a class="card__imgbox card__imgbox_xs" href="#" style="background-image: url(img/block-img-01.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
@@ -964,7 +961,7 @@
               <div class="card margin-bottom-0">
                 <div class="content-title">
                   <div class="content-titlebox">
-                    <h2>Недорогой компьютер б\у</h2>
+                    <h2><a href="#">Недорогой компьютер б\у</a></h2>
                   </div>
                 </div>
               </div>
@@ -979,13 +976,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-3">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-02.jpg);">
+                  <div class="card"><a class="card__imgbox card__imgbox_xs" href="#" style="background-image: url(img/block-img-02.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
@@ -999,7 +993,7 @@
               <div class="card margin-bottom-0">
                 <div class="content-title">
                   <div class="content-titlebox">
-                    <h2>Вывоз мусора, недорого!</h2>
+                    <h2><a href="#">Вывоз мусора, недорого!</a></h2>
                   </div>
                 </div>
               </div>
@@ -1014,13 +1008,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-3">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/noimage.png);">
+                  <div class="card"><a class="card__imgbox card__imgbox_xs" href="#" style="background-image: url(img/noimage.png);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
@@ -1034,7 +1025,7 @@
               <div class="card margin-bottom-0">
                 <div class="content-title">
                   <div class="content-titlebox">
-                    <h2>Сдам в аренду инструмент для ремонта</h2>
+                    <h2><a href="#">Сдам в аренду инструмент для ремонта</a></h2>
                   </div>
                 </div>
               </div>
@@ -1049,13 +1040,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-3">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-03.jpg);">
+                  <div class="card"><a class="card__imgbox card__imgbox_xs" href="#" style="background-image: url(img/block-img-03.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
@@ -1069,7 +1057,7 @@
               <div class="card margin-bottom-0">
                 <div class="content-title">
                   <div class="content-titlebox">
-                    <h2>Несколько хороших книг</h2>
+                    <h2><a href="#">Несколько хороших книг</a></h2>
                   </div>
                 </div>
               </div>
@@ -1084,13 +1072,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-3">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-04.jpg);">
+                  <div class="card"><a class="card__imgbox card__imgbox_xs" href="#" style="background-image: url(img/block-img-04.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
@@ -1104,7 +1089,7 @@
               <div class="card margin-bottom-0">
                 <div class="content-title">
                   <div class="content-titlebox">
-                    <h2>Продам 2к квартиру</h2>
+                    <h2><a href="#">Продам 2к квартиру</a></h2>
                   </div>
                 </div>
               </div>
@@ -1119,13 +1104,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-3">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-05.jpg);">
+                  <div class="card"><a class="card__imgbox card__imgbox_xs" href="#" style="background-image: url(img/block-img-05.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
@@ -1139,7 +1121,7 @@
               <div class="card margin-bottom-0">
                 <div class="content-title">
                   <div class="content-titlebox">
-                    <h2>Отдам даром скотят</h2>
+                    <h2><a href="#">Отдам даром скотят</a></h2>
                   </div>
                 </div>
               </div>
@@ -1154,13 +1136,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-3">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-06.jpg);">
+                  <div class="card"><a class="card__imgbox card__imgbox_xs" href="#" style="background-image: url(img/block-img-06.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
