--- a/calendar.html
+++ b/calendar.html
@@ -935,6 +935,9 @@
                   </div>
                 </div>
               </div>
+              <div class="card">
+                <div class="card-calendar" id="pageCalendar"></div>
+              </div>
               <div class="card card-calendar">
                 <div class="content-title">
                   <div class="content-subtitle margin-top-10">
