--- a/productions-system.html
+++ b/productions-system.html
@@ -939,12 +939,10 @@
               </div>
               <div class="row">
                 <div class="col-sm-4">
-                  <div class="card bg-color-dark-1">
-                    <div class="card__imgbox card__imgbox_sm" style="background-image: url(img/news-third-01.jpg);">
+                  <div class="card bg-color-dark-1"><a class="card__imgbox card__imgbox_sm" href="#" style="background-image: url(img/news-third-01.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
+                      </div></a>
                     <div class="card__content">
                       <div class="tagbox">
                         <div class="tag">
@@ -955,18 +953,16 @@
                           <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                         </div>
                       </div>
-                      <div class="card__title"><a href="#">Насосно-компрессорные<br>трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
                       <div class="card-date"><span>24 Сентября 2018</span></div>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-4">
-                  <div class="card bg-color-dark-1">
-                    <div class="card__imgbox card__imgbox_sm" style="background-image: url(img/news-third-02.jpg);">
+                  <div class="card bg-color-dark-1"><a class="card__imgbox card__imgbox_sm" href="#" style="background-image: url(img/news-third-02.jpg);">
                       <div class="card-warning-text">
                         <p>Оценка: ПЛОХО!</p>
-                      </div>
-                    </div>
+                      </div></a>
                     <div class="card__content">
                       <div class="tagbox">
                         <div class="tag">
@@ -977,14 +973,14 @@
                           <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                         </div>
                       </div>
-                      <div class="card__title"><a href="#">Обход управлющего <br> директора БАЗ цеха №1</a></div>
+                      <div class="card__title"><a href="#">Обход управлющего директора БАЗ цеха №1</a></div>
                       <div class="card-date"><span>24 Сентября 2018</span></div>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm-4">
                   <div class="card">
-                    <div class="card-wrap" style="background-image: url(img/news-third-full-img-01.jpg);">
+                    <div class="card-wrap" style="background-image: url(img/news-third-full-img-01.jpg);"><a class="card-wrap__imglnk" href="#"></a>
                       <div class="card__content card__content_sm">
                         <div class="tagbox">
                           <div class="tag">
@@ -995,7 +991,7 @@
                             <button class="like-button like-button_light"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные <br>трубы ТЭСЦ-1</a></div>
+                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1</a></div>
                         <div class="card-date card-date_light"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
