--- a/profile.html
+++ b/profile.html
@@ -939,9 +939,7 @@
               </div>
               <div class="row">
                 <div class="col-6 col-sm-4 order-0">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_xl" style="background-image: url(img/photo-01.png);"></div>
-                  </div>
+                  <div class="card"><a class="card__imgbox card__imgbox_xl" href="#" style="background-image: url(img/photo-01.png);"></a></div>
                 </div>
                 <div class="col-12 col-sm-8 order-2 order-sm-1">
                   <div class="card">
@@ -1314,13 +1312,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-4">
-                  <div class="card">
-                    <div class="card__imgbox card__imgbox_sm" style="background-image: url(img/block-img-14.jpg);">
+                  <div class="card"><a class="card__imgbox card__imgbox_sm" href="#" style="background-image: url(img/block-img-14.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-8">
                   <div class="card">
@@ -1333,13 +1328,10 @@
               </div>
               <div class="row">
                 <div class="col-12 col-sm-4">
-                  <div class="card">
-                    <div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-13.jpg);">
+                  <div class="card"><a class="card-third__imgbox card__imgbox" href="#" style="background-image: url(img/block-img-13.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
-                      </div>
-                    </div>
-                  </div>
+                      </div></a></div>
                 </div>
                 <div class="col-12 col-sm-8">
                   <div class="card">
