--- a/search-result.html
+++ b/search-result.html
@@ -956,13 +956,13 @@
               </div>
               <div class="card">
                 <div class="content-text">
-                  <h3 class="margin-bottom-10">Серафимович, Александр Серафимович</h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
+                  <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
                   <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
                 </div>
               </div>
               <div class="card">
                 <div class="content-text">
-                  <h3 class="margin-bottom-10">Серафимович, Александр Серафимович</h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
+                  <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
                   <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
                 </div>
               </div>
@@ -979,7 +979,7 @@
                 <div class="col-12 col-sm-8">
                   <div class="card">
                     <div class="content-text fix-height-210 text-ddd-210">
-                      <h3 class="margin-bottom-10">Интервью с Серафимович Александром про модернизацию новых разработок</h3>
+                      <h3 class="margin-bottom-10"><a href="#">Интервью с Серафимович Александром про модернизацию новых разработок</a></h3>
                       <div class="card-date card-date_big margin-bottom-10">11 Декабря 2018, 17:44</div>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка</p><a class="button card__more" href="#">Читать далее</a>
@@ -989,25 +989,25 @@
               </div>
               <div class="card">
                 <div class="content-text">
-                  <h3 class="margin-bottom-10">Серафимович, Александр Серафимович</h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
+                  <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
                   <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
                 </div>
               </div>
               <div class="card">
                 <div class="content-text">
-                  <h3 class="margin-bottom-10">Серафимович, Александр Серафимович</h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
+                  <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
                   <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
                 </div>
               </div>
               <div class="card">
                 <div class="content-text">
-                  <h3 class="margin-bottom-10">Серафимович, Александр Серафимович</h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
+                  <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
                   <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
                 </div>
               </div>
               <div class="card">
                 <div class="content-text">
-                  <h3 class="margin-bottom-10">Серафимович, Александр Серафимович</h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
+                  <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
                   <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
                 </div>
               </div>
