--- a/stylegide.html
+++ b/stylegide.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
     <link href="css/style.css?0.2.6" rel="stylesheet">
-    <title>Календарь | ОМК</title>
+    <title>Стайлгайд | ОМК</title>
   </head>
   <body>
     <!--links-->
@@ -926,184 +926,216 @@
           </div>
           <div class="col-12 col-md-9">
             <div class="content-group">
-              <div class="card card-full card-full-head">
-                <div class="card-wrap card-full-wrap card-wrap-head">
-                  <div class="content-title">
-                    <div class="content-titlebox">
-                      <h1>Календарь</h1>
+              <div class="row">
+                <div class="col-12">
+                  <div class="card padding-top-15">
+                    <div class="content-titlebox_dark">
+                      <h4>ПАЛИТРА</h4>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-light"></div>
+                    <div class="card__text text-center">
+                      <p>#FFFFFF</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-light-1"></div>
+                    <div class="card__text text-center">
+                      <p>#FBFBFB</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-1"></div>
+                    <div class="card__text text-center">
+                      <p>#EEEFEF</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-2"></div>
+                    <div class="card__text text-center">
+                      <p>#E0E1E2</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-3"></div>
+                    <div class="card__text text-center">
+                      <p>#DDDEE0</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-4"></div>
+                    <div class="card__text text-center">
+                      <p>#D0D1D3</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-5"></div>
+                    <div class="card__text text-center">
+                      <p>#BCBDC0</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-6"></div>
+                    <div class="card__text text-center">
+                      <p>#A5A6AA</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-7"></div>
+                    <div class="card__text text-center">
+                      <p>#A1A3A7</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-8"></div>
+                    <div class="card__text text-center">
+                      <p>#797C82</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-9"></div>
+                    <div class="card__text text-center">
+                      <p>#5E6167</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-dark-10"></div>
+                    <div class="card__text text-center">
+                      <p>#000000</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-danger"></div>
+                    <div class="card__text text-center">
+                      <p>#008330</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-success"></div>
+                    <div class="card__text text-center">
+                      <p>#008330</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-blue"></div>
+                    <div class="card__text text-center">
+                      <p>#008ACC</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <div class="box height-65 bg-color-light bg-color-warning"></div>
+                    <div class="card__text text-center">
+                      <p>#EE9800</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="card">
-                <div class="card-calendar" id="pageCalendar"></div>
-              </div>
-              <div class="card card-calendar">
-                <div class="content-title">
-                  <div class="content-subtitle margin-top-10">
-                    <h2>Ноябрь, <span>2018</span></h2>
-                  </div>
-                  <div class="content-subtitle content-subtitle_right">
-                    <h3><span>< Сегодня: 20 Ноября ></span></h3>
-                  </div>
-                </div>
-                <div class="calendar-wrap">
-                  <table class="calendar">
-                    <thead>
-                      <tr>
-                        <th>ПН</th>
-                        <th>ВТ</th>
-                        <th>СР</th>
-                        <th>ЧТ</th>
-                        <th>ПТ</th>
-                        <th>СБ</th>
-                        <th>ВС</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>29</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>30</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>31</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>1</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>2</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>3</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>4</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>5</p>
-                        </td>
-                        <td class="calendar__day" data-placement="right" data-toggle="tooltip" data-html="true" title="&lt;p&gt;День металлурга&lt;/p&gt; 					&lt;p&gt;День поедателей йогуртов&lt;/p&gt; 					&lt;p&gt;День металлурга 2&lt;/p&gt;"><a class="calendar__link" href="calendar.html#events-06-10-2018">
-                            <p>6</p><span class="calendar__caption">3 события</span></a></td>
-                        <td class="calendar__day">
-                          <p>7</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>8</p>
-                        </td>
-                        <td class="calendar__day"><a href="#">
-                            <p>9</p></a></td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>10</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>11</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>12</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>13</p>
-                        </td>
-                        <td class="calendar__day" data-placement="right" data-toggle="tooltip" data-html="true" title="&lt;p&gt;День металлурга&lt;/p&gt; 					&lt;p&gt;День поедателей йогуртов&lt;/p&gt; 					&lt;p&gt;День металлурга 2&lt;/p&gt;"><a class="calendar__link" href="calendar2.html#events-14-10-2018">
-                            <p>14</p><span class="calendar__caption">3 события</span></a></td>
-                        <td class="calendar__day calendar__day_special">
-                          <p>15</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>16</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>17</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>18</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>19</p>
-                        </td>
-                        <td class="calendar__day calendar__today">
-                          <div>
-                            <p>20</p><span class="calendar__caption">Сегодня</span>
-                          </div>
-                        </td>
-                        <td class="calendar__day">
-                          <p>21</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>22</p>
-                        </td>
-                        <td class="calendar__day">
-                          <div>
-                            <p>23              </p>
-                          </div>
-                        </td>
-                        <td class="calendar__day calendar__weekend" data-placement="right" data-toggle="tooltip" data-html="true" title="&lt;p&gt;День поедателей йогуртов&lt;/p&gt;"><a class="calendar__link" href="calendar3.html#events-24-10-2018">
-                            <p>24</p><span class="calendar__caption">1 событие</span></a></td>
-                        <td class="calendar__day calendar__weekend calendar__day_major"><a href="#">
-                            <p>25</p><span class="calendar__caption">Важное событие</span></a></td>
-                      </tr>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>26</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>27</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>28</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>29</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>30</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>1</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>2</p>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-              <div class="card" id="events-24-10-2018">
-                <div class="sign-title">
-                  <p> События: 24 Ноября 2018 <a class="calendar__link sign-title__link" href="#event1-24-10-2018">День поедателей йогуртов</a>
-                  </p>
-                </div>
-              </div>
-              <article class="article" id="event1-24-10-2018">
-                <div class="card">
-                  <div class="content-title">
-                    <div class="article-title content-titlebox">
-                      <h3>День поедателей йогуртов</h3>
+              <div class="row">
+                <div class="col-12">
+                  <div class="card">
+                    <div class="content-titlebox_dark">
+                      <h4>ШРИФТЫ</h4>
                     </div>
                   </div>
-                  <div class="article-imgwrap">
-                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/news-twothirds-full-img-01.jpg);"></div>
+                </div>
+                <div class="col-6 clearfix">
+                  <div class="card margin-right-20 float-left w-auto">
+                    <div class="content__title">
+                      <h2 class="font-size-40">Aa</h2>
+                    </div>
+                    <div class="card__text">
+                      <p>PT Serif</p>
+                    </div>
                   </div>
-                  <div class="article-quote">
-                    <blockquote class="article-blockquote">Правило тут достаточно простое: чем меньше срок годности йогурта, тем он натуральнее. Так называемый «живой» йогурт может храниться при температуре 2-6 градусов Цельсия максимум 2-3 недели. Если же на упаковке указан большой срок годности (свыше 3-4 недель), то вряд в данном йогурте вряд ли содержаться полезные пробиотики. Ведь увеличить срок хранения йогурта можно только за счет его термообработки, в результате которой все полезные микроорганизмы погибают.</blockquote>
+                  <div class="card margin-right-20 float-left w-auto">
+                    <div class="card__text">
+                      <p class="margin-bottom-0">Regular</p>
+                      <p class="margin-bottom-0"><i>Regular Italic</i></p>
+                      <p class="margin-bottom-0"><b>Bold</b></p>
+                      <p class="margin-bottom-0"><b><i>Bold Italic</i></b></p>
+                      <p class="margin-bottom-0">
+                        <u>Underline</u>
+                      </p>
+                    </div>
                   </div>
-                  <div class="article-text">
-                    <p>Если в названии или описании йогурта написано, что он термизированный или стерилизованный, то можно с уверенностью сказать, что данный продукт в ходе его производства подвергался термической обработке (это так называемый «неживой» йогурт). В процессе такой обработки погибли не только вредные, но и полезные микроорганизмы, так необходимые нашему организму. В результате чего срок годности такого йогурта может достигать 30 дней и более.</p>
-                    <p>Однако хоть в ходе термообработки и погибают все полезные биологические культуры, «неживой» йогурт может принести определенную пользу вашему организму, ведь он богат белками, углеводами и жирами, витаминами и минералами.</p>
+                  <div class="card w-auto">
+                    <div class="card__text">
+                      <p>Основной шрифт для заголовков, текста новостей, и большинства текстовых блоков</p>
+                    </div>
                   </div>
                 </div>
-              </article>
+                <div class="col-6 clearfix">
+                  <div class="card margin-right-20 float-left w-auto">
+                    <div class="content-text margin-bottom-0">
+                      <h2 class="font-size-40">Aa</h2>
+                    </div>
+                    <div class="content-text">
+                      <p>Roboto</p>
+                    </div>
+                  </div>
+                  <div class="card margin-right-20 float-left w-auto">
+                    <div class="content-text">
+                      <p class="margin-bottom-0">Regular</p>
+                      <p class="margin-bottom-0"><i>Regular Italic</i></p>
+                      <p class="margin-bottom-0"><b>Bold</b></p>
+                      <p class="margin-bottom-0"><b><i>Bold Italic</i></b></p>
+                      <p class="margin-bottom-0">
+                        <u>Underline</u>
+                      </p>
+                    </div>
+                  </div>
+                  <div class="card w-auto">
+                    <div class="content-text">
+                      <p>Более системный шрифт, чаще используется для информационных элементов типа кнопок, меню и т.п.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="card">
+                    <div class="content-titlebox_dark">
+                      <h4>КНОПКИ</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-6"></div>
+              </div>
             </div>
           </div>
         </div>
