--- a/tables.html
+++ b/tables.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
     <link href="css/style.css?0.2.6" rel="stylesheet">
-    <title>404 | ОМК</title>
+    <title>Таблицы | ОМК</title>
   </head>
   <body>
     <!--links-->
