--- a/video.html
+++ b/video.html
@@ -971,12 +971,8 @@
                 </div>
                 <div class="card card-full card-full-slider">
                   <div class="card-full-slider-wrap card-wrap card-full-wrap">
-                    <div class="card-full-slider__item">
-                      <div class="card__imgbox card__videobox card__imgbox_xl" style="background-image: url(img/news-twothirds-img-01.jpg);"></div>
-                    </div>
-                    <div class="card-full-slider__item">
-                      <div class="card__imgbox card__videobox card__imgbox_xl" style="background-image: url(img/article-img-01.jpg);"> </div>
-                    </div>
+                    <div class="card-full-slider__item"><a class="card__imgbox card__videobox card__imgbox_xl" href="#" style="background-image: url(img/news-twothirds-img-01.jpg);"></a></div>
+                    <div class="card-full-slider__item"><a class="card__imgbox card__videobox card__imgbox_xl" href="#" style="background-image: url(img/article-img-01.jpg);"></a></div>
                   </div>
                 </div>
               </div>
