--- a/gallery.html
+++ b/gallery.html
@@ -1537,16 +1537,10 @@
                 <div class="card card-full card-full-slider">
                   <div class="card-full-slider-wrap card-wrap card-full-wrap">
                     <div class="card-full-slider__item">
-                      <div class="card__imgwrap">
-                        <div class="card__imgbox card__imgbox_third" style="background-image: url(img/article-img-01.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_twothird" style="background-image: url(img/article-img-02.jpg)"></div>
-                      </div>
+                      <div class="card__imgwrap"><a class="card__imgbox card__imgbox_third" href="#" style="background-image: url(img/article-img-01.jpg)"></a><a class="card__imgbox card__imgbox_twothird" href="#" style="background-image: url(img/article-img-02.jpg)"></a></div>
                     </div>
                     <div class="card-full-slider__item">
-                      <div class="card__imgwrap">
-                        <div class="card__imgbox card__imgbox_third" style="background-image: url(img/article-img-01.jpg)"></div>
-                        <div class="card__imgbox card__imgbox_twothird" style="background-image: url(img/article-img-02.jpg)"></div>
-                      </div>
+                      <div class="card__imgwrap"><a class="card__imgbox card__imgbox_third" href="#" style="background-image: url(img/article-img-01.jpg)"></a><a class="card__imgbox card__imgbox_twothird" href="#" style="background-image: url(img/article-img-02.jpg)"></a></div>
                     </div>
                   </div>
                 </div>
