--- a/calendar3.html
+++ b/calendar3.html
@@ -935,147 +935,130 @@
                   </div>
                 </div>
               </div>
-              <div class="card card-calendar">
+              <div class="card">
                 <div class="content-title">
                   <div class="content-subtitle margin-top-10">
-                    <h2>Ноябрь, <span>2018</span></h2>
+                    <h2>Ноябрь,<span> 2018</span></h2>
                   </div>
                   <div class="content-subtitle content-subtitle_right">
                     <h3><span>< Сегодня: 20 Ноября ></span></h3>
                   </div>
                 </div>
-                <div class="calendar-wrap">
-                  <table class="calendar">
-                    <thead>
-                      <tr>
-                        <th>ПН</th>
-                        <th>ВТ</th>
-                        <th>СР</th>
-                        <th>ЧТ</th>
-                        <th>ПТ</th>
-                        <th>СБ</th>
-                        <th>ВС</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>29</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>30</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>31</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>1</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>2</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>3</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>4</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>5</p>
-                        </td>
-                        <td class="calendar__day" data-placement="right" data-toggle="tooltip" data-html="true" title="&lt;p&gt;День металлурга&lt;/p&gt; 					&lt;p&gt;День поедателей йогуртов&lt;/p&gt; 					&lt;p&gt;День металлурга 2&lt;/p&gt;"><a class="calendar__link" href="calendar.html#events-06-10-2018">
-                            <p>6</p><span class="calendar__caption">3 события</span></a></td>
-                        <td class="calendar__day">
-                          <p>7</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>8</p>
-                        </td>
-                        <td class="calendar__day"><a href="#">
-                            <p>9</p></a></td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>10</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>11</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>12</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>13</p>
-                        </td>
-                        <td class="calendar__day" data-placement="right" data-toggle="tooltip" data-html="true" title="&lt;p&gt;День металлурга&lt;/p&gt; 					&lt;p&gt;День поедателей йогуртов&lt;/p&gt; 					&lt;p&gt;День металлурга 2&lt;/p&gt;"><a class="calendar__link" href="calendar2.html#events-14-10-2018">
-                            <p>14</p><span class="calendar__caption">3 события</span></a></td>
-                        <td class="calendar__day calendar__day_special">
-                          <p>15</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>16</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>17</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>18</p>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>19</p>
-                        </td>
-                        <td class="calendar__day calendar__today">
-                          <div>
-                            <p>20</p><span class="calendar__caption">Сегодня</span>
-                          </div>
-                        </td>
-                        <td class="calendar__day">
-                          <p>21</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>22</p>
-                        </td>
-                        <td class="calendar__day">
-                          <div>
-                            <p>23              </p>
-                          </div>
-                        </td>
-                        <td class="calendar__day calendar__weekend" data-placement="right" data-toggle="tooltip" data-html="true" title="&lt;p&gt;День поедателей йогуртов&lt;/p&gt;"><a class="calendar__link" href="calendar3.html#events-24-10-2018">
-                            <p>24</p><span class="calendar__caption">1 событие</span></a></td>
-                        <td class="calendar__day calendar__weekend calendar__day_major"><a href="#">
-                            <p>25</p><span class="calendar__caption">Важное событие</span></a></td>
-                      </tr>
-                      <tr>
-                        <td class="calendar__day">
-                          <p>26</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>27</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>28</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>29</p>
-                        </td>
-                        <td class="calendar__day">
-                          <p>30</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>1</p>
-                        </td>
-                        <td class="calendar__day calendar__weekend">
-                          <p>2</p>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
+                <div class="card-calendar" id="pageCalendar"></div>
               </div>
+              <!--.card.card-calendar.hide
+              .content-title
+              	.content-subtitle.margin-top-10
+              		h2
+              			| Ноябрь, 
+              			span 2018
+              	.content-subtitle.content-subtitle_right
+              		h3
+              			span < Сегодня: 20 Ноября >
+              .calendar-wrap
+              	table.calendar
+              		thead
+              			tr
+              				th ПН
+              				th ВТ
+              				th СР
+              				th ЧТ
+              				th ПТ
+              				th СБ
+              				th ВС
+              		tbody
+              			tr
+              				td.calendar__day
+              					p 29
+              				td.calendar__day
+              					p 30
+              				td.calendar__day
+              					p 31
+              				td.calendar__day
+              					p 1
+              				td.calendar__day
+              					p 2
+              				td.calendar__day.calendar__weekend
+              					p 3
+              				td.calendar__day.calendar__weekend
+              					p 4
+              			tr
+              				td.calendar__day
+              					p 5
+              				td.calendar__day(data-placement='right', data-toggle='tooltip', data-html='true', title='<p>День металлурга</p> \
+              				<p>День поедателей йогуртов</p> \
+              				<p>День металлурга 2</p>')
+              					a.calendar__link(href='calendar.html#events-06-10-2018')
+              						p 6
+              						span.calendar__caption 3 события
+              				td.calendar__day
+              					p 7
+              				td.calendar__day
+              					p 8
+              				td.calendar__day
+              					a(href='#')
+              						p 9
+              				td.calendar__day.calendar__weekend
+              					p 10
+              				td.calendar__day.calendar__weekend
+              					p 11
+              			tr
+              				td.calendar__day
+              					p 12
+              				td.calendar__day
+              					p 13
+              				td.calendar__day(data-placement='right', data-toggle='tooltip', data-html='true', title='<p>День металлурга</p> \
+              				<p>День поедателей йогуртов</p> \
+              				<p>День металлурга 2</p>')
+              					a.calendar__link(href='calendar2.html#events-14-10-2018')
+              						p 14
+              						span.calendar__caption 3 события
+              				td.calendar__day.calendar__day_special
+              					p 15
+              				td.calendar__day
+              					p 16
+              				td.calendar__day.calendar__weekend
+              					p 17
+              				td.calendar__day.calendar__weekend
+              					p 18
+              			tr
+              				td.calendar__day
+              					p 19
+              				td.calendar__day.calendar__today
+              					div
+              						p 20
+              						span.calendar__caption Сегодня
+              				td.calendar__day
+              					p 21
+              				td.calendar__day
+              					p 22
+              				td.calendar__day
+              					div
+              						p 23              
+              				td.calendar__day.calendar__weekend(data-placement='right', data-toggle='tooltip', data-html='true', title='<p>День поедателей йогуртов</p>')
+              					a.calendar__link(href='calendar3.html#events-24-10-2018')
+              						p 24
+              						span.calendar__caption 1 событие
+              				td.calendar__day.calendar__weekend.calendar__day_major
+              					a(href='#')
+              						p 25
+              						span.calendar__caption Важное событие
+              			tr
+              				td.calendar__day
+              					p 26
+              				td.calendar__day
+              					p 27
+              				td.calendar__day
+              					p 28
+              				td.calendar__day
+              					p 29
+              				td.calendar__day
+              					p 30
+              				td.calendar__day.calendar__weekend
+              					p 1
+              				td.calendar__day.calendar__weekend
+              					p 2
+              -->
               <div class="card" id="events-24-10-2018">
                 <div class="sign-title">
                   <p> События: 24 Ноября 2018 <a class="calendar__link sign-title__link" href="#event1-24-10-2018">День поедателей йогуртов</a>
